Upgrade Mainroad theme

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,9 @@
-{{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
+<main class="main" role="main">
     <article class="center cf pv5 measure-wide-l">
       <img src="/images/droids.jpg"
            alt="Ce n'est pas page que vous cherchez"
            title="Ce n'est pas la page que vous cherchez" />
     </article>
+</main>
 {{ end }}
